@@ -476,14 +476,6 @@ future my break our code.
 
 =for readme continue
 
-=head2 A Note about Dependencies
-
-Most of the dependencies of L<Const::Exporter> are core modules.
-
-L<Package::Stash> is used by L<DBIx::Class>, L<Moose> and
-L<namespace::clean>. Those modules are used by many Modern Perl
-modules and applications.
-
 =head1 SEE ALSO
 
 See L<Exporter> for a discussion of export tags.
